--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "devDependencies": {
         "@babel/cli": "^7.8.3",
         "@babel/core": "^7.8.3",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/plugin-proposal-private-methods": "^7.13.0",
+        "@babel/plugin-transform-runtime": "^7.13.9",
         "@babel/preset-env": "^7.8.3",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^3.0.0",
@@ -27,6 +30,11 @@
         "webpack-dev-server": "^3.10.1"
     },
     "dependencies": {
+        "@babel/plugin-proposal-numeric-separator": "^7.12.13",
+        "@babel/runtime": "^7.13.9",
+        "@tweenjs/tween.js": "^18.6.4",
+        "axios": "^0.21.1",
+        "core-js": "3",
         "three": "^0.130.1"
     }
 }
