--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
         "@tweenjs/tween.js": "^18.6.4",
         "axios": "^0.21.1",
         "core-js": "3",
-        "three": "^0.130.1",
-        "tweenjs": "^1.0.2"
+        "three": "^0.130.1"
     }
 }
