--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
-    "name": "webpack-slim",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "webpack --config webpack.config.prod.js",
-        "start": "webpack-dev-server --config webpack.config.dev.js --hot --open --color"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/cli": "^7.8.3",
-        "@babel/core": "^7.8.3",
-        "@babel/plugin-proposal-class-properties": "^7.13.0",
-        "@babel/plugin-proposal-private-methods": "^7.13.0",
-        "@babel/plugin-transform-runtime": "^7.13.9",
-        "@babel/preset-env": "^7.8.3",
-        "babel-loader": "^8.0.6",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.0.3",
-        "css-loader": "^4.1.1",
-        "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.3.0",
-        "mini-css-extract-plugin": "^0.9.0",
-        "style-loader": "^1.1.3",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.41.5",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
-    },
-    "dependencies": {
-        "@babel/plugin-proposal-numeric-separator": "^7.12.13",
-        "@babel/runtime": "^7.13.9",
-        "@tweenjs/tween.js": "^18.6.4",
-        "axios": "^0.21.1",
-        "core-js": "3",
-        "three": "^0.130.1"
-    }
+  "name": "card-manhattan",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "three": "^0.130.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
