--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "three": "^0.130.1"
   },
   "scripts": {
