--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "card-manhattan",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
     "axios": "^0.21.1",
